--- a/ProjectForTesting/Views/Home/Calendar.cshtml
+++ b/ProjectForTesting/Views/Home/Calendar.cshtml
@@ -24,6 +24,7 @@
 <script src="/lib/calendar.js"></script>
 <script>
     TAG_ID_SELECTED_DATE = "#selected-date-id";
-    IS_POSITION_ABSOLUTE = true;
+    IS_POSITION_ABSOLUTE = false;
     MARGIN_TOP = 3;
+    IS_DISPLAY = true;
 </script>
