--- a/ProjectForTesting/Views/Shared/_Layout.cshtml
+++ b/ProjectForTesting/Views/Shared/_Layout.cshtml
@@ -27,7 +27,9 @@
                     <li>@Html.ActionLink("Chart", "Chart", "Home")</li>
                     <li>@Html.ActionLink("Donut", "Donut", "Home")</li>
                     <li>@Html.ActionLink("Calendar", "Calendar", "Home")</li>
+                    <li id="open-email-modal"><a href="#">Email</a></li>
                 </ul>
+                @Html.Include("email")
             </div>
         </div>
     </div>
